feat(board): add Todo Board Logic
Todo Board use roles to track access, enable multiple user accessing the same board