@@ -5,20 +5,22 @@ import jakarta.transaction.Transactional;
 import lombok.extern.slf4j.Slf4j;
 
 import org.jetbrains.annotations.NotNull;
-import org.junyinchen.collabtaskerbackend.models.Privilege;
 import org.junyinchen.collabtaskerbackend.models.Role;
+import org.junyinchen.collabtaskerbackend.models.TodoBoard;
 import org.junyinchen.collabtaskerbackend.models.User;
+import org.junyinchen.collabtaskerbackend.repositories.BoardRepository;
 import org.junyinchen.collabtaskerbackend.repositories.PrivilegeRepository;
 import org.junyinchen.collabtaskerbackend.repositories.RoleRepository;
 import org.junyinchen.collabtaskerbackend.repositories.UserRepository;
+import org.junyinchen.collabtaskerbackend.services.BoardService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ApplicationListener;
 import org.springframework.context.event.ContextRefreshedEvent;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
 
-import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 @Component
 @Slf4j
@@ -27,6 +29,8 @@ public class SetupDataLoader implements ApplicationListener<ContextRefreshedEven
     private final RoleRepository roleRepository;
     private final PrivilegeRepository privilegeRepository;
     private final PasswordEncoder passwordEncoder;
+    private final BoardRepository boardRepository;
+    private final BoardService boardService;
     boolean alreadySetup = false;
 
     @Autowired
@@ -34,11 +38,15 @@ public class SetupDataLoader implements ApplicationListener<ContextRefreshedEven
             UserRepository userRepository,
             RoleRepository roleRepository,
             PrivilegeRepository privilegeRepository,
-            PasswordEncoder passwordEncoder) {
+            PasswordEncoder passwordEncoder,
+            BoardRepository boardRepository,
+            BoardService boardService) {
         this.userRepository = userRepository;
         this.roleRepository = roleRepository;
         this.privilegeRepository = privilegeRepository;
         this.passwordEncoder = passwordEncoder;
+        this.boardRepository = boardRepository;
+        this.boardService = boardService;
     }
 
     @Override
@@ -47,29 +55,26 @@ public class SetupDataLoader implements ApplicationListener<ContextRefreshedEven
         if (alreadySetup) {
             return;
         }
-        log.info("Populate Database with Roles");
-        Role userRole = createRoleIfNotFound("ROLE_USER", Collections.emptyList());
+        log.info("Populate Database with Role");
+        Role userRole =
+                Role.builder().name("ROLE_USER").privileges(Collections.emptyList()).build();
+        Role boardRole =
+                Role.builder().name("ROLE_BOARD_1").privileges(Collections.emptyList()).build();
+        roleRepository.save(userRole);
+        roleRepository.save(boardRole);
+        log.info("Populate Database with Board");
+        var board = TodoBoard.builder().title("Test's Todo Board").role(boardRole).build();
+        boardRepository.save(board);
+        log.info("Populate Database with User");
         var user =
                 User.builder()
                         .username("test")
                         .firstName("Test")
                         .lastName("Test")
                         .password(passwordEncoder.encode("test"))
-                        .roles(Collections.singletonList(userRole))
+                        .roles(List.of(userRole, boardRole))
                         .enabled(true)
                         .build();
         userRepository.save(user);
-    }
-
-    @Transactional
-    Role createRoleIfNotFound(String name, Collection<Privilege> privileges) {
-
-        Role role = roleRepository.findByName(name);
-        if (role == null) {
-            role = new Role(name);
-            role.setPrivileges(privileges);
-            roleRepository.save(role);
-        }
-        return role;
     }
 }
